Inserted illustrations and created LOI

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -44,3 +44,54 @@ section[epub|type~="dedication"] > *{
 	font-style: normal;
 }
 /* end bridgeheads */
+
+/* figures */
+figure{
+	break-inside: avoid;
+}
+
+figure img{
+	display: block;
+	margin: auto;
+	max-width: 100%;
+}
+
+figure.small-image img{
+	max-width: 75%;
+}
+
+figcaption{
+	font-size: .75em;
+	font-style: italic;
+	margin: 1em;
+}
+
+figcaption p + p{
+	text-indent: 0;
+}
+
+figure.full-page{
+	break-after: page;
+	break-before: page;
+	margin: 0;
+	max-height: 100vh;
+	text-align: center;
+}
+
+@supports(display: flex){
+	figure.full-page{
+		display: flex;
+		flex-direction: column;
+	}
+
+	figure.full-page img{
+		height: 100vh;
+		object-fit: contain;
+	}
+}
+
+figure{
+	margin: 1em 40px;
+	text-align: center;
+}
+/* end figures */
