Added footer styling to local.css

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -2,6 +2,11 @@
 @namespace epub "http://www.idpf.org/2007/ops";
 
 
+footer{
+	text-align: right;
+	margin-top: 0.5em;
+}
+
 /* Centered dedications */
 section[epub|type~="dedication"]{
 	text-align: center;
