Tagged diary dates in earlier chapters

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -100,3 +100,8 @@ figure{
 	text-align: center;
 }
 /* end figures */
+
+span[epub:type="se:diary.dateline"] {
+	font-style: italic;
+	color: red;
+}
