--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -100,19 +100,22 @@ figure{
 }
 /* end figures */
 
-#chapter-11 table{
+#chapter-11 table,
+#chapter-17 table{
 	margin-bottom: 0.5em;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 0.5em;
 }
 
-#chapter-11 table td{
+#chapter-11 table td,
+#chapter-17 table td{
 	padding-left: 1em;
 	padding-right: 1em;
 }
 
-#chapter-11 table td:not(:first-child){
+#chapter-11 table td:not(:first-child),
+#chapter-17 table td:not(:first-child){
 	text-align: center;
 }
 
