Some formatting tweaks to the Dedication

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -9,6 +9,7 @@ footer{
 /* Centered dedications */
 section[epub|type~="dedication"]{
 	text-align: center;
+	font-variant: small-caps;
 }
 
 section[epub|type~="dedication"] > *{
