--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -2,13 +2,14 @@
 @namespace epub "http://www.idpf.org/2007/ops";
 
 footer{
-	margin-top: 0.5em;
+	margin-top: 1em;
 	text-align: right;
 }
 
 /* Centered dedications */
 section[epub|type~="dedication"]{
 	text-align: center;
+	text-indent: 0;
 	font-variant: small-caps;
 }
 
@@ -108,6 +109,7 @@ figure{
 	margin-right: auto;
 	margin-top: 0.5em;
 	border-collapse: collapse;
+	font-variant-numeric: tabular-nums;
 }
 
 #chapter-11 table th,
