--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -56,6 +56,8 @@ section[epub|type~="dedication"] > *{
 /* figures */
 figure{
 	break-inside: avoid;
+	margin: 1em 40px;
+	text-align: center;
 }
 
 figure img{
